--- a/Udemy - Webdesign Front-end - HTML CSS JS/Seção 4 - Estrutura semântica e posicionamento/ProjetoCSS-inicio/styles/estilo.css
+++ b/Udemy - Webdesign Front-end - HTML CSS JS/Seção 4 - Estrutura semântica e posicionamento/ProjetoCSS-inicio/styles/estilo.css
@@ -36,8 +36,8 @@ body{
 
 .hero nav ul
 {
-    margin: 20px 50px 0 0;
-
+    margin: 20px 80px 0 0;
+    text-align: right;
 }
 
 .hero nav li
@@ -45,5 +45,16 @@ body{
     display: inline-block;
     list-style-type: none;
     border: 1px solid white;
+    margin-left: 16px;
+}
+
+.hero nav a{
+    background-color: rgba(0, 0, 0, .3);
+    padding: 16px;
+    display: block;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
 }
 
