--- a/Udemy - Webdesign Front-end - HTML CSS JS/Seção 4 - Estrutura semântica e posicionamento/ProjetoCSS-inicio/styles/estilo.css
+++ b/Udemy - Webdesign Front-end - HTML CSS JS/Seção 4 - Estrutura semântica e posicionamento/ProjetoCSS-inicio/styles/estilo.css
@@ -2,7 +2,6 @@ body{
     margin:0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #ccc;
-
 }
 
 .hero{
@@ -14,8 +13,8 @@ body{
 }
 
 .hero-content{
-    margin-top: 50px auto 0;
-    width: 80%;
+    margin-top: 80px auto 0;
+    width: 100%;
     text-align: center;
     color: white;
 }
@@ -24,6 +23,7 @@ body{
     font-size: 56px;
     text-shadow: 2px 2px 2px rgb(0, 0, 0);
     text-transform: uppercase;
+    margin-bottom: 0;
 }
 
 .hero-content p{
@@ -56,5 +56,46 @@ body{
     text-decoration: none;
     text-transform: uppercase;
     font-size: 12px;
+    letter-spacing: 2px;
 }
 
+.hero nav a:hover{
+    background-color: rgba(0, 0, 0, .5);
+}
+
+main{
+    width: 90%;
+    margin: auto;
+    max-width: 860px;
+}
+
+article{
+    background-color: white;
+    padding: 16px;
+    margin-bottom: 32px;
+    margin-top:32px;
+}
+
+article h2{
+    border-bottom: 2px solid #ccc;
+    background-color: #eee;
+    padding: 10px;
+    margin-top: 0;
+}
+
+.btn{
+    background-color: #cdc7c3;
+    display: block;
+    padding: 12px 16px;
+    border-radius: 6px;
+    margin-left: auto;
+    width: fit-content;
+}
+
+.rodape{
+    color: white;
+    background-color: #6b6c68;
+    text-align: center;
+    padding: 30px;
+    text-shadow: 2px 2px 2px black;
+}
